--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+textarea{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;  font-size: 1.2em;
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 60vw;
+  border-radius: 5px;
+  height: fit-content;
+}
+
+h3{
+  color:#ffffffc6;
+}
+
+.Positive{
+  color: green;
+}
+.Negative{
+  color: red
+}
+.ai-response{
+  background-color:#3f3c3c9b;
+  border: 3px solid white;
+  width: 60vw;
+  height: fit-content;
+  min-height: 100px;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+button{
+  padding: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  font-size: 1em;
+  border-radius: 5px;
+  border: none;
+  background-color: rgba(255, 255, 0, 0.726);
+
 }
